Changelog
=========


1.0.1 (unreleased)
------------------

- Fix typo in readme in example, thanks @mauritsvanrees for reporting.
  [jone]


1.0.0 (2014-04-27)
------------------

- Initial implementation.
  [jone]