@@ -5,6 +5,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+- Add "index" option, so that pypi mirrors can be used.
+  [jone]
+
 - Fix typo in readme in example, thanks @mauritsvanrees for reporting.
   [jone]
 
